facts: add Miek

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "Arnim",
     "Attuma",
     "Bucky",
+    "Caiera",
     "Cerebro",
     "Coulson",
     "Daken",
@@ -54,6 +55,7 @@
     "marvelsnap",
     "marvelsnapzone",
     "Maximus",
+    "Miek",
     "Minoru",
     "Mobius",
     "Morbius",
