--- a/facts/step1/allCardsFromUntappedGg.json
+++ b/facts/step1/allCardsFromUntappedGg.json
@@ -558,18 +558,23 @@
   {
     "id": 25,
     "defId": "Blink",
-    "cost": 3,
-    "power": 1,
+    "cost": 5,
+    "power": 7,
     "name": "Blink",
-    "description": "You can move this each turn. When it moves, +1 Power.",
-    "attributes": {
-      "data": {
-        "AddedPower": 1
-      }
-    },
+    "description": "<b>On Reveal:</b> Swap the last card you played with a higher-Cost card\nfrom your deck.",
     "series": 0,
-    "artists": [],
-    "seriesStartTimestamps": []
+    "artists": [
+      {
+        "name": "Ivan Shavrin",
+        "type": 1
+      },
+      {
+        "name": "Ryan Kinnaird",
+        "type": 4
+      }
+    ],
+    "seriesStartTimestamps": [1715040000000, 1717459200000],
+    "possibleSeries": 8
   },
   {
     "id": 26,
@@ -718,8 +723,8 @@
   {
     "id": 32,
     "defId": "Cable",
-    "cost": 3,
-    "power": 4,
+    "cost": 2,
+    "power": 3,
     "name": "Cable",
     "description": "<b>On Reveal:</b> Draw a card from your opponent's deck.",
     "series": 4,
@@ -1521,10 +1526,10 @@
   {
     "id": 67,
     "defId": "ElsaBloodstone",
-    "cost": 2,
+    "cost": 3,
     "power": 3,
     "name": "Elsa Bloodstone",
-    "description": "After you play a card that fills this location, give it +2 Power.",
+    "description": "Each card you play to fill your side of a location gains +2 Power.",
     "attributes": {
       "data": {
         "AddedPower": 2
@@ -2677,12 +2682,7 @@
     "cost": 5,
     "power": 3,
     "name": "Leech",
-    "description": "At the start of turn 6, remove all abilities from cards in your\nopponent's hand.",
-    "attributes": {
-      "data": {
-        "TurnNumber": 6
-      }
-    },
+    "description": "<b>On Reveal:</b> Remove the text from cards with <b>On Reveal</b> abilities in\nyour opponent's hand.",
     "series": 5,
     "artists": [
       {
@@ -2905,9 +2905,9 @@
     "id": 129,
     "defId": "Mantis",
     "cost": 2,
-    "power": 3,
+    "power": 2,
     "name": "Mantis",
-    "description": "<b>On Reveal:</b> If your opponent played a card here this turn, draw a card\nfrom <i>their</i> deck.",
+    "description": "<b>On Reveal:</b> If your opponent played any cards here this turn, copy one of them into your hand.",
     "series": 4,
     "artists": [
       {
@@ -3009,7 +3009,7 @@
     "cost": 1,
     "power": 2,
     "name": "M'Baku",
-    "description": "If this is in your deck at the end of the game, it jumps to a location.",
+    "description": "At the end of the game, this jumps from your deck to your lowest-Power location. <i>(that isn't full)</i>",
     "series": 6,
     "artists": [
       {
@@ -4155,9 +4155,14 @@
     "id": 183,
     "defId": "RedGuardian",
     "cost": 3,
-    "power": 4,
+    "power": 3,
     "name": "Red Guardian",
-    "description": "<b>On Reveal:</b> Remove the text of the lowest-Power enemy card here.",
+    "description": "<b>On Reveal:</b> Afflict the lowest-Power enemy card here with -2 Power and remove its text.",
+    "attributes": {
+      "data": {
+        "ReducedPower": 2
+      }
+    },
     "series": 0,
     "artists": [
       {
@@ -4169,7 +4174,7 @@
         "type": 4
       }
     ],
-    "seriesStartTimestamps": [1714435200000],
+    "seriesStartTimestamps": [1713225600000],
     "possibleSeries": 8
   },
   {
@@ -4914,7 +4919,7 @@
     "defId": "SnowguardWolf",
     "cost": 4,
     "power": 8,
-    "name": "Snowguard",
+    "name": "Snowguard Wolf",
     "description": "<b>Ongoing:</b> -2 Power for each other card you have here.",
     "attributes": {
       "data": {
@@ -5521,10 +5526,10 @@
     "cost": 1,
     "power": 1,
     "name": "Time Stone",
-    "description": "<b>On Reveal:</b> Draw a card. Next turn, you get +1 Energy.",
+    "description": "<b>On Reveal:</b> Draw a card and give it -1 Cost.",
     "attributes": {
       "data": {
-        "AddedEnergy": 1
+        "ReducedCost": 1
       }
     },
     "series": 0,
@@ -6115,7 +6120,7 @@
     "cost": 1,
     "power": 2,
     "name": "Yondu",
-    "description": "<b>On Reveal:</b> Destroy the top card of your opponent's deck.",
+    "description": "<b>On Reveal:</b> Destroy the lowest-Cost card in your opponent's deck.",
     "series": 4,
     "artists": [
       {
@@ -6427,7 +6432,7 @@
     "description": "At the start of the game, unlock the potential of your cards with no abilities.",
     "attributes": {
       "cards": {
-        "Card_Related": [329, 330, 331, 332, 333, 334, 335]
+        "Card_Related": [333, 334, 335, 336, 337, 338, 339]
       }
     },
     "series": 8,
@@ -6741,7 +6746,7 @@
     "description": "<b>On Reveal:</b> After you play your next card, cast a spell. <i>(The spell\nchanges each turn.)</i>",
     "attributes": {
       "cards": {
-        "Card_Related": [336, 337, 338, 339, 340, 341, 342]
+        "Card_Related": [340, 341, 342, 343, 344, 345, 346]
       }
     },
     "series": 8,
@@ -7057,7 +7062,7 @@
     "cost": 1,
     "power": 1,
     "name": "Miek",
-    "description": "After each turn, if you discarded any cards, gain +1 Power for each\nand move.",
+    "description": "When you discard a card, this gains +1 Power and can move next turn.",
     "attributes": {
       "data": {
         "AddedPower": 1
@@ -7141,7 +7146,7 @@
         "AssignedCost": 0
       }
     },
-    "series": 9,
+    "series": 8,
     "artists": [
       {
         "name": "Eduardo Mello",
@@ -7153,7 +7158,6 @@
       }
     ],
     "seriesStartTimestamps": [1707177600000, 1709596800000],
-    "possibleSeries": 8,
     "collectible": true
   },
   {
@@ -7263,7 +7267,7 @@
         "AddedEnergy": 1
       }
     },
-    "series": 0,
+    "series": 9,
     "artists": [
       {
         "name": "Eduardo Mello",
@@ -7285,7 +7289,7 @@
     "power": 1,
     "name": "Pixie",
     "description": "<b>On Reveal:</b> Shuffle the Costs of all cards in your deck that started there.",
-    "series": 0,
+    "series": 8,
     "artists": [
       {
         "name": "Eduardo Mello",
@@ -7297,7 +7301,6 @@
       }
     ],
     "seriesStartTimestamps": [1709596800000],
-    "possibleSeries": 8,
     "collectible": true
   },
   {
@@ -7306,13 +7309,13 @@
     "cost": 5,
     "power": 9,
     "name": "Mockingbird",
-    "description": "Costs 1 less for each card you have in play that didn't start in your deck.",
+    "description": "Costs 1 less for each of your cards in play that didn't start in your deck.",
     "attributes": {
       "data": {
         "ReducedCost": 1
       }
     },
-    "series": 0,
+    "series": 8,
     "artists": [
       {
         "name": "Eduardo Mello",
@@ -7324,7 +7327,7 @@
       }
     ],
     "seriesStartTimestamps": [1710201600000],
-    "possibleSeries": 8
+    "collectible": true
   },
   {
     "id": 322,
@@ -7332,7 +7335,7 @@
     "cost": 5,
     "power": 8,
     "name": "Cannonball",
-    "description": "<b>On Reveal:</b> Move an enemy card away from here and add a Rock where it was. If it can't move, destroy it to add the Rock.",
+    "description": "<b>On Reveal:</b> Move the highest-Power enemy card here away. If you can't, destroy it with a Rock.",
     "attributes": {
       "cards": {
         "Card_Token": [187]
@@ -7350,15 +7353,16 @@
       }
     ],
     "seriesStartTimestamps": [1710806400000],
-    "possibleSeries": 8
+    "possibleSeries": 8,
+    "collectible": true
   },
   {
     "id": 323,
     "defId": "BaronZemo",
-    "cost": 4,
-    "power": 6,
+    "cost": 3,
+    "power": 4,
     "name": "Baron Zemo",
-    "description": "<b>On Reveal:</b> Add the lowest-Cost card from your opponent's deck here on your side.",
+    "description": "<b>On Reveal:</b> Recruit the lowest-Cost card from your opponent's deck to your side of this location.",
     "series": 0,
     "artists": [
       {
@@ -7379,7 +7383,7 @@
     "cost": 6,
     "power": 10,
     "name": "Red Hulk",
-    "description": "When your opponent ends a turn with unspent Energy, +4 Power. <i>(if in hand or in play)</i>",
+    "description": "When your opponent ends a turn with unspent Energy, +4 Power.\n<i>(if in hand or in play)</i>",
     "attributes": {
       "data": {
         "AddedPower": 4
@@ -7403,12 +7407,15 @@
     "id": 325,
     "defId": "USAgent",
     "cost": 2,
-    "power": 6,
+    "power": 2,
     "name": "U.S. Agent",
-    "description": "<b>Ongoing:</b> -1 Power for each of your other cards here.",
+    "description": "<b>Ongoing:</b> 4, 5, and 6-Cost cards here have -3 Power.",
     "attributes": {
       "data": {
-        "ReducedPower": 1
+        "TargetCardCost_1": 4,
+        "TargetCardCost_2": 5,
+        "TargetCardCost_3": 6,
+        "ReducedPower": 3
       }
     },
     "series": 0,
@@ -7431,7 +7438,7 @@
     "cost": 2,
     "power": 2,
     "name": "White Widow",
-    "description": "<b>On Reveal:</b> Add a -1-Power Widow's Kiss to your opponent's side of here.",
+    "description": "<b>On Reveal:</b> Add a Widow's Kiss to your opponent's side of this location.",
     "attributes": {
       "cards": {
         "Card_Token": [327]
@@ -7448,19 +7455,19 @@
         "type": 4
       }
     ],
-    "seriesStartTimestamps": [1713225600000],
+    "seriesStartTimestamps": [1713830400000],
     "possibleSeries": 8
   },
   {
     "id": 327,
     "defId": "WidowsKiss",
-    "cost": 1,
-    "power": -1,
+    "cost": 0,
+    "power": 0,
     "name": "Widow's Kiss",
-    "description": "<b>Ongoing:</b> Your other cards here have -1 Power.",
+    "description": "<b>Ongoing:</b> This has -4 Power. Disable this ability if your side of this\nlocation is full.",
     "attributes": {
       "data": {
-        "ReducedPower": 1
+        "ReducedPower": 4
       }
     },
     "series": 0,
@@ -7482,12 +7489,12 @@
     "cost": 2,
     "power": 2,
     "name": "Valentina",
-    "description": "<b>On Reveal:</b> Add a random 6-Cost card to your hand. Give it -2 Cost and -2 Power.",
+    "description": "<b>On Reveal:</b> Add a random 6-Cost card to your hand. Give it -2 Cost\nand -3 Power.",
     "attributes": {
       "data": {
         "TokenEnergyCost": 6,
         "ReducedCost": 2,
-        "ReducedPower": 2
+        "ReducedPower": 3
       }
     },
     "series": 0,
@@ -7501,11 +7508,110 @@
         "type": 4
       }
     ],
-    "seriesStartTimestamps": [1713830400000],
+    "seriesStartTimestamps": [1714435200000],
     "possibleSeries": 8
   },
   {
     "id": 329,
+    "defId": "Nocturne",
+    "cost": 3,
+    "power": 5,
+    "name": "Nocturne",
+    "description": "You can move this once. When this moves, replace its location with a random new one.",
+    "series": 0,
+    "artists": [
+      {
+        "name": "Eduardo Mello",
+        "type": 1
+      },
+      {
+        "name": "Ryan Kinnaird",
+        "type": 4
+      }
+    ],
+    "seriesStartTimestamps": [1715040000000],
+    "possibleSeries": 8
+  },
+  {
+    "id": 330,
+    "defId": "Sage",
+    "cost": 4,
+    "power": 1,
+    "name": "Sage",
+    "description": "<b>On Reveal:</b> +2 Power for each different Power among all\nother cards here.",
+    "attributes": {
+      "data": {
+        "AddedPower": 2
+      }
+    },
+    "series": 0,
+    "artists": [
+      {
+        "name": "Eduardo Mello",
+        "type": 1
+      },
+      {
+        "name": "Ryan Kinnaird",
+        "type": 4
+      }
+    ],
+    "seriesStartTimestamps": [1715644800000],
+    "possibleSeries": 8
+  },
+  {
+    "id": 331,
+    "defId": "Sasquatch",
+    "cost": 6,
+    "power": 10,
+    "name": "Sasquatch",
+    "description": "Costs 1 less for each card you played last turn.",
+    "attributes": {
+      "data": {
+        "ReducedCost": 1
+      }
+    },
+    "series": 0,
+    "artists": [
+      {
+        "name": "Eduardo Mello",
+        "type": 1
+      },
+      {
+        "name": "Ryan Kinnaird",
+        "type": 4
+      }
+    ],
+    "seriesStartTimestamps": [1716854400000],
+    "possibleSeries": 8
+  },
+  {
+    "id": 332,
+    "defId": "Namora",
+    "cost": 5,
+    "power": 5,
+    "name": "Namora",
+    "description": "<b>On Reveal:</b> Give +5 Power to each of your cards alone at another location.",
+    "attributes": {
+      "data": {
+        "AddedPower": 5
+      }
+    },
+    "series": 0,
+    "artists": [
+      {
+        "name": "Eduardo Mello",
+        "type": 1
+      },
+      {
+        "name": "Ryan Kinnaird",
+        "type": 4
+      }
+    ],
+    "seriesStartTimestamps": [1716249600000],
+    "possibleSeries": 8
+  },
+  {
+    "id": 333,
     "defId": "EvolvedWasp",
     "cost": 0,
     "power": 1,
@@ -7521,7 +7627,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 330,
+    "id": 334,
     "defId": "EvolvedMistyKnight",
     "cost": 1,
     "power": 2,
@@ -7537,7 +7643,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 331,
+    "id": 335,
     "defId": "EvolvedShocker",
     "cost": 2,
     "power": 3,
@@ -7553,7 +7659,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 332,
+    "id": 336,
     "defId": "EvolvedCyclops",
     "cost": 3,
     "power": 4,
@@ -7570,7 +7676,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 333,
+    "id": 337,
     "defId": "EvolvedTheThing",
     "cost": 4,
     "power": 6,
@@ -7587,7 +7693,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 334,
+    "id": 338,
     "defId": "EvolvedAbomination",
     "cost": 5,
     "power": 9,
@@ -7603,7 +7709,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 335,
+    "id": 339,
     "defId": "EvolvedHulk",
     "cost": 6,
     "power": 12,
@@ -7619,7 +7725,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 336,
+    "id": 340,
     "defId": "Spell01NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7628,7 +7734,7 @@
     "attributes": {
       "cards": {
         "Card_Token": [52],
-        "Card_Related": [337, 338, 339, 340, 341, 342]
+        "Card_Related": [341, 342, 343, 344, 345, 346]
       }
     },
     "series": 0,
@@ -7636,7 +7742,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 337,
+    "id": 341,
     "defId": "Spell02NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7644,7 +7750,7 @@
     "description": "<b>On Reveal:</b> After you play your next card, destroy it to draw two cards.",
     "attributes": {
       "cards": {
-        "Card_Related": [336, 338, 339, 340, 341, 342]
+        "Card_Related": [340, 342, 343, 344, 345, 346]
       }
     },
     "series": 0,
@@ -7652,7 +7758,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 338,
+    "id": 342,
     "defId": "Spell03NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7660,7 +7766,7 @@
     "description": "<b>On Reveal:</b> After you play your next card, move it one location to the right.",
     "attributes": {
       "cards": {
-        "Card_Related": [336, 337, 339, 340, 341, 342]
+        "Card_Related": [340, 341, 343, 344, 345, 346]
       }
     },
     "series": 0,
@@ -7668,7 +7774,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 339,
+    "id": 343,
     "defId": "Spell04NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7679,7 +7785,7 @@
         "AddedPower": 2
       },
       "cards": {
-        "Card_Related": [336, 337, 338, 340, 341, 342]
+        "Card_Related": [340, 341, 342, 344, 345, 346]
       }
     },
     "series": 0,
@@ -7687,7 +7793,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 340,
+    "id": 344,
     "defId": "Spell05NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7695,7 +7801,7 @@
     "description": "<b>On Reveal:</b> After you play your next card, replace that card's location.",
     "attributes": {
       "cards": {
-        "Card_Related": [336, 337, 338, 339, 341, 342]
+        "Card_Related": [340, 341, 342, 343, 345, 346]
       }
     },
     "series": 0,
@@ -7703,7 +7809,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 341,
+    "id": 345,
     "defId": "Spell06NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7711,7 +7817,7 @@
     "description": "<b>On Reveal:</b> After you play your next card, add a copy of it to your hand.",
     "attributes": {
       "cards": {
-        "Card_Related": [336, 337, 338, 339, 340, 342]
+        "Card_Related": [340, 341, 342, 343, 344, 346]
       }
     },
     "series": 0,
@@ -7719,7 +7825,7 @@
     "seriesStartTimestamps": []
   },
   {
-    "id": 342,
+    "id": 346,
     "defId": "Spell07NicoMinoru",
     "cost": 1,
     "power": 2,
@@ -7727,7 +7833,7 @@
     "description": "<b>On Reveal:</b> After you play your next card, double this card's Power.",
     "attributes": {
       "cards": {
-        "Card_Related": [336, 337, 338, 339, 340, 341]
+        "Card_Related": [340, 341, 342, 343, 344, 345]
       }
     },
     "series": 0,
